--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select-async-paginate": "^0.7.2",
     "recharts": "^2.5.0"
   },
   "devDependencies": {
