--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^3.0.0-beta.54",
     "react-dom": "^18.2.0",
-    "react-select-async-paginate": "^0.7.2",
-    "recharts": "^2.5.0"
+    "react-select-async-paginate": "^0.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
